# Rustoholics-Instructions

./: README.md  STYLEGUIDE.md  gitguide.md
palinda-1/: README.md  go.mod
palinda-1/docs/: README.md
palinda-2/: README.md  go.mod
palinda-2/docs/: README.md
palinda-2/src/: bug02.go  many2many.go  oracle.go
palinda-3/: .gitignore  README.md  go.mod
project-week-0/: README.md
project-week-1/: README.md
project-week-2/: README.md
project-week-2/doc-example/: Cargo.toml
task-02-rust-intro/: README.md
task-02-rust-intro/kattis_template/: Cargo.toml
task-03-chess/: README.md
task-03-chess/chess_template/: Cargo.toml
task-05-chess-gui/: README.md
task-05-chess-gui/chess-gui-templates/ggez-template/: Cargo.toml
task-05-chess-gui/chess-gui-templates/ggez-template/src/: main.rs
task-05-chess-gui/chess-gui-templates/piston-template/: Cargo.toml
task-05-chess-gui/chess-gui-templates/piston-template/src/: main.rs
task-06-sockets/: README.md
task-07-clang/: README.md
task-08-assembly/: README.md  instruction_examples.asm  triangle.asm
task-09-isa/: README.md
task-10-simulation/: README.md
task-10-simulation/examples/perlin-noise-walker/: Cargo.toml
task-10-simulation/examples/perlin-noise-walker/src/: main.rs  math.rs  walker.rs
task-11-sorting/: README.md
task-12-raycasting/: README.md
task-13-raytracer/: README.md
task-14-haskell/: README.md
task-15-prolog/: README.md  alive_example.txt  dead_example.txt  prolog_example.pl  template.pl
task-16-hash/: README.md
task-17-trees/: README.md
task-18-ml/: README.md
task-quicksort/: README.md
(+80 files in other folders)
