[package]
name = "piston-template"
version = "0.1.0"
edition = "2021"
authors = ["Isak Larsson <isaklar@kth.se>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_template = { git = "https://github.com/INDAPlus21/chess-template.git" } # Replace this with the library you want to use
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"